[package]
name = "lsm-db-tutorial-smol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
miette = "7.2.0"
nanoserde = "0.1.37"
smol = "2.0.0"

[dev-dependencies]
eyre = "0.6.12"

[workspace]
members = ["examples/*"]
